--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,87 @@
 .App {
-  text-align: center;
+  margin: 16px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+  font-weight: 700;
+  border-bottom: 3px solid #ccc;
+  padding-bottom: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.weather-search-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  gap: 5px;
+  margin: 8px 0;
+}
+
+.weather-result {
+  margin: 32px;
+}
+
+.weather-result .weather {
+  font-size: 40px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.weather-result .location,
+.weather-result td.label {
+  color: gray;
+}
+
+.weather-result-error {
+  padding: 4px;
+  margin: 8px 0 64px 0;
+  background-color: rgba(255, 0, 0, 0.1);
+  border: 1px solid rgba(255, 0, 0, 1);
+}
+
+.weather-result-loading {
+  padding: 4px;
+  margin: 8px 0 64px 0;
+  background-color: rgba(63, 195, 128, 0.1);
+  border: 1px solid rgba(63, 195, 128, 1);
+}
+
+.search-history ol {
+  margin-block-start: 0;
+  padding-inline-start: 20px;
+}
+
+.search-history .no-record {
+  color: gray;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-top: 40px;
 }
 
-.App-link {
-  color: #61dafb;
+.history-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 0;
+  padding-top: 25px;
+  border-bottom: 2px solid #ddd;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.history-item .actions {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.history-item button {
+  width: 24px;
+  height: 24px;
+  border-radius: 100%;
+  background-color: #eee;
+  border: none;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  transition: all 250ms;
+}
+
+.history-item .search-button:hover {
+  background-color: #aaa;
 }
