--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,10 @@
   border: 1px solid rgba(63, 195, 128, 1);
 }
 
+.search-history {
+  margin-top: 64px;
+}
+
 .search-history ol {
   margin-block-start: 0;
   padding-inline-start: 20px;
